[package]
name = "angle_out"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.15.0"
bevy-inspector-egui-rapier = { version ="0.9.0", features = ["rapier2d"]}
bevy_prototype_lyon = "0.7.2"
bevy_rapier2d = "0.19.0"
leafwing-input-manager = "0.7.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
