[package]
name = "angle_out"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.16.0"
bevy-inspector-egui-rapier = { version ="0.9.0", features = ["rapier2d"]}
bevy_framepace = "0.11.0"
bevy_hanabi = "0.5.2"
bevy_prototype_lyon = "0.7.2"
bevy_rapier3d = "0.19.0"
bevy_sprite3d = "2.3.1"
leafwing-input-manager = "0.7.1"
rand = "0.8.5"


[patch.crates-io]
gilrs = { path = "../gilrs/gilrs" }


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
